# mdbook-utils

./: .dockerignore  .env  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASES.md  TODO.md  broken_links.md  categories.md  duplicate_links.md  justfile  patch.diff  patch_code.py  patch_dependencies.py  patch_link.py  patch_tests.diff  rustfmt.toml
.cargo/: config.toml  mdbook-utils.code-workspace
.devcontainer/: .env  Dockerfile  ci.sh  compose-ci.yaml  compose.override.yaml  compose.yaml  dev.sh  devcontainer.json  publish.sh
.github/: dependabot.yml
.github/workflows/: build_test_code_and_deploy_userguide.yml  buildandtest.yml  publish workflow TODO.txt  publish.yml
.jules/: sentinel.md
docs/src/: SUMMARY.md  configuration.md  contributing.md  installation.md  introduction.md
src/: build_book.rs  dependencies.rs  lib.rs  main.rs  sitemap.rs  test_markdown.rs
src/api/: categories.rs  debug.rs  links.rs  markdown.rs  mod.rs  refdefs.rs  sitemap.rs
src/cli/: args.rs  book_toml.rs  config.rs  links_commands.rs  markdown_commands.rs  mod.rs  refdefs_commands.rs
src/cli/interact/: completion.rs  history.rs  mod.rs
src/dependencies/: cargo.rs  get_dependencies.rs  mod.rs
src/fs/: dir.rs  find_markdown_files.rs  mod.rs  path_validation.rs  read_files.rs  unused.rs
src/generate/: crates.rs  merge_refdefs.rs  mod.rs  refdefs_from_dependencies.rs  regex.rs
src/link/: link_and_linkbuilder.rs  mod.rs  rules.rs  write_to_file.rs
src/link/link_and_linkbuilder/: builder.rs  link.rs  mod.rs
src/link/rules/: mod.rs  regexes.rs  structs.rs
src/markdown/: extract_code.rs  mod.rs  remove_includes.rs  replace_include.rs
src/parser/: extract_links.rs  extract_refdefs.rs  mod.rs
src/sitemap/: mod.rs  xml.rs
src/write_from_parser/: github.rs  mod.rs  write_raw_to.rs  write_ref_defs.rs  write_refdefs.rs  write_whole.rs
test_book/: .gitignore  README.md  book.toml
test_book/code/: Cargo.toml
test_book/drafts/: example.md  example2.md
test_book/src/: SUMMARY.md  chapter_1.md  index.md  wont-be-included-refs.md
test_book/src/chapter_2/: another_page.md  incl.md  index.md
tests/: security_tests.rs
user_guide/: book.toml
user_guide/src/: SUMMARY.md  introduction.md  refs.md  usage.md
user_guide/src/contributing/: build_and_test.md  publish.md  repo_structure.md
user_guide/src/definitions/: code_blocks_and_includes.md  images_and_badges.md
user_guide/src/usage/: command_line_options.md  links.md  markdown.md  refdefs.md
userguide/: book.toml
userguide/src/: configuration.md  contributing.md  definitions.md  installation.md  introduction.md  public_api.md  refs.md  usage.md
userguide/src/contributing/: development_setup.md  repo_structure.md
userguide/src/definitions/: links_and_refdefs.md
userguide/src/usage/: command_line_options.md  links.md  markdown.md  refdefs.md
