[package]
name = "mdbook-utils"
version = "0.1.4"
authors = ["John CD"]
edition = "2024"
rust-version = "1.87"
description = "Tools to manage links, reference definitions, and code examples in Markdown files, especially `mdbook` source directories."
readme = "README.md"
homepage = "https://john-cd.com/mdbook-utils/"
repository = "https://github.com/john-cd/mdbook-utils/"
license = "MIT OR Apache-2.0"
keywords = ["documentation", "markdown", "book", "mdbook", "rustbook"]
categories = [
    "parser-implementations",
    "parsing",
    "text-processing",
    "development-tools",
    "command-line-utilities",
]
publish = true
exclude = [
    "/.devcontainer",
    "/.github",
    "/test_book",
    "/user_guide",
    ".*",
    "TODO.md",
    "rustfmt.toml",
    "justfile",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "RELEASES.md",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
cargo_toml = "0.22.3"
clap = { version = "4.5.39", features = ["derive"] }
console = "0.16.0"
csv = "1.3.1"
dialoguer = { version = "0.12.0", features = ["history", "completion"] }
dotenvy = "0.15.7"
enumflags2 = "0.7.11"
envy = "0.4.2"
heck = "0.5.0"
once_cell = "1.21.3"
pulldown-cmark = "0.13.0"
# pulldown-cmark = { version = "0.12", default-features = false, features = ["simd"] }
# pulldown-cmark-to-cmark = "11"
quick-xml = "0.38.2"
rand = "0.9.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.5", features = ["parse"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
walkdir = "2.5.0"

[[bin]]
doc = false
name = "mdbook-utils"
