[package]
name = "mdbook-utils"
version = "0.1.4"
authors = ["John CD"]
edition = "2024"
rust-version = "1.90"
description = "Tools to manage links, reference definitions, and code examples in Markdown files, especially `mdbook` source directories."
readme = "README.md"
homepage = "https://john-cd.com/mdbook-utils/"
repository = "https://github.com/john-cd/mdbook-utils/"

keywords = ["documentation", "markdown", "book", "mdbook", "rustbook"]
categories = [
    "parser-implementations",
    "parsing",
    "text-processing",
    "development-tools",
    "command-line-utilities",
]
publish = true
exclude = [
    "/.devcontainer",
    "/.github",
    "/test_book",
    "/user_guide",
    ".*",
    "TODO.md",
    "rustfmt.toml",
    "justfile",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "RELEASES.md",
]

[[bin]]
doc = false
name = "mdbook-utils"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
cargo_toml = "0.22.3"
clap = { version = "4.6.1", features = ["derive", "env"] }
console = "0.16.3"
csv = "1.4.0"
dialoguer = { version = "0.12.0", features = ["history", "completion"] }
dotenvy = "0.15.7"
enumflags2 = "0.7.12"
envy = "0.4.2"
heck = "0.5.0"
once_cell = "1.21.4"
pulldown-cmark = "0.13.3"
# pulldown-cmark = { version = "0.12", default-features = false, features = ["simd"] }
quick-xml = "0.39.2"
rand = "0.10.1"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
toml = { version = "1.1.2", features = ["parse"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
walkdir = "2.5.0"

[dev-dependencies]
